2006-02-05  Dmitry Dulepov  <typo3@accio.lv>

	* Fix: (Versioning sysext) Two cells in table had hard-coded bgcolor attribute (were not skinnable)

2006-02-04  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* Fixed a minor logical bug in undo/history
	* Made SU-mode work again (was affected by hook name change)

2006-02-02  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Adjustments to the htmlArea RTE extension (see details in local ChangeLog)

2006-02-01  Dmitry Dulepov  <typo3@accio.lv>

	* Fix: renaming of localconf.php.TMP.php to localconf.php did not work on Windows platform

2006-02-01  Bernhard Kraft  <kraftb@kraftb.at>

	* Fixed an issue with non working links in JSMENUs

2006-02-01  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* t3lib_htmlmail email message-id: global declaration was missing.

2006-01-31  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* tslib_content: remove unused hooks originally intended for use by Direct Mail

2006-01-31  Bernhard Kraft  <kraftb@kraftb.at>

	* Fixed bug #2396: Select-box items where displayed with garbled characters when forceCharset was set to utf-8

2006-01-31  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* t3lib_htmlmail: make email message-id compliant with RFC 2822.

2006-01-27  Bernhard Kraft  <kraftb@kraftb.at>

	* Fixed bug #760: "gifbuilder jpgs are 256 colors" for enabling truecolor pngs set [GFX][png_truecolor] variable (reduceColors still gets respected)

2005-01-30  Michael Stucki  <michael@typo3.org>

	* Added two hooks to class.t3lib_tceforms.php, getMainFieldsClass: getMainFields_preProcess and getMainFields_postProcess (requested by Thomas Hempel for use with the "dynaflex" extension.
	* Fixed gremlin #1628: Removed "Text with image below" from the content wizard
	* Some cleanup to indexed_search: Removed the TypoScript property "tableParams" which is not used anymore.